Fixed z-index bug in project page.

--- a/assets/stylesheets/project.less
+++ b/assets/stylesheets/project.less
@@ -376,6 +376,11 @@
   .progress-bd{
     .m-comment {
       margin: 0 0 28px 0;
+
+      .edui-default {
+        position: relative;
+        z-index: 10;
+      }
     }
 
     .item {
@@ -889,10 +894,12 @@
 
 /* Creating status */
 .project-introduce.creating {
+  margin-bottom: 0;
   /* summary */
   .summary {
     .section-inner {
       min-height: 440px;
+      padding: 0 0 65px 0;
     }
 
     .name {
